--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "animate.css": "^3.6.1",
     "chartist": "^0.11.0",
     "gatsby": "^1.9.273",
     "gatsby-link": "^1.6.40",
     "gatsby-plugin-google-fonts": "0.0.4",
     "gatsby-plugin-react-helmet": "^2.0.10",
     "gatsby-plugin-sass": "^1.0.26",
+    "react-animate-on-scroll": "^2.1.5",
     "react-chartist": "^0.13.1",
     "react-helmet": "^5.2.0",
     "react-icons": "^2.2.7",
+    "react-scroll-effects": "^1.0.13",
     "react-slick": "^0.23.1",
     "react-swipe": "^5.1.1"
   },
