--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-default",
-  "description": "Gatsby default starter",
+  "name": "vwt-landing",
+  "description": "Landing page template",
   "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Joshua Hackett",
   "dependencies": {
     "animate.css": "^3.6.1",
     "chartist": "^0.11.0",
@@ -15,9 +15,10 @@
     "react-chartist": "^0.13.1",
     "react-helmet": "^5.2.0",
     "react-icons": "^2.2.7",
-    "react-scroll-effects": "^1.0.13",
+    "react-responsive": "^4.1.0",
+    "react-scrollchor": "^5.1.0",
     "react-slick": "^0.23.1",
-    "react-swipe": "^5.1.1"
+    "slick-carousel": "^1.8.1"
   },
   "keywords": [
     "gatsby"
