--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "chartist": "^0.11.0",
     "gatsby": "^1.9.273",
     "gatsby-link": "^1.6.40",
+    "gatsby-plugin-favicon": "^2.1.1",
     "gatsby-plugin-google-analytics": "^1.0.31",
     "gatsby-plugin-google-fonts": "0.0.4",
     "gatsby-plugin-react-helmet": "^2.0.10",
