--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-plugin-google-fonts": "0.0.4",
     "gatsby-plugin-react-helmet": "^2.0.10",
     "gatsby-plugin-sass": "^1.0.26",
+    "markdown-it": "^8.4.1",
     "react-animate-on-scroll": "^2.1.5",
     "react-chartist": "^0.13.1",
     "react-helmet": "^5.2.0",
