--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write 'src/**/*.js'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "beautify": "./node_modules/js-beautify/js/bin/html-beautify.js ./public/index.html -o ./public/index.html && ./node_modules/js-beautify/js/bin/css-beautify.js ./public/styles.css -o ./public/styles.css"
   },
   "devDependencies": {
     "prettier": "^1.13.7"
